semantics/snapshots/better_api_semantics__path__test__path_part_new_basic-2.snap
---
source: semantics/path.rs
expression: diagnostics
---
[
    Report {
        severity: Warning,
        title: "unecessary empty path specified",
        labels: [
            Label {
                style: Primary,
                message: "unecessary empty path specified",
                span: Span {
                    start: 0,
                    end: 3,
                },
            },
        ],
        note: Some(
            "help: path should be omited instead of specifying an empty path",
        ),
    },
]
